--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,20 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Mail-Address-MobileJp
-version:      0.08
-version_from: lib/Mail/Address/MobileJp.pm
-installdirs:  site
+--- #YAML:1.0
+name:               Mail-Address-MobileJp
+version:            0.09
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Mail::Address:                 0
-    Test::More:                    0.32
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Mail::Address:  0
+    Test::More:     0.32
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
